# WARio

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  LICENSE.md  Makefile  README  README.md  TODO  setup.sh
artifact/: README.md
artifact/WARio-PLDI-2022-artifact/: README.md  TODO.txt
artifact/WARio-PLDI-2022-artifact/code/: README.md
benchmarks/: .gitignore  Makefile  benchmark-powertrace.sh  build-run.sh  collect.sh  make-benchmarks.mk  make-generate.mk  make-loop-benchmarks.mk  make-powertrace-benchmarks.mk  make-powertrace-file-benchmarks.mk  run.sh
benchmarks/aes/: CMakeLists.txt
benchmarks/aes/src/: CMakeLists.txt
benchmarks/aes/src/aes/: aes.c  aes.h  test.c
benchmarks/coremark/: CMakeLists.txt
benchmarks/coremark/src/: CMakeLists.txt
benchmarks/coremark/src/icemu/: core_portme.c  printfmap.c
benchmarks/crc/: CMakeLists.txt
benchmarks/crc/src/: CMakeLists.txt
benchmarks/crc/src/crc/: main.c
benchmarks/crc/src/portme/: fread.c  fread.h
benchmarks/dijkstra/: CMakeLists.txt
benchmarks/dijkstra/src/: CMakeLists.txt
benchmarks/dijkstra/src/dijkstra/: dijkstra.c
benchmarks/picojpeg/: CMakeLists.txt
benchmarks/picojpeg/src/: CMakeLists.txt
benchmarks/picojpeg/src/picojpeg/: Makefile  bintoc  genall.sh  host-test  jpegdata.h  picojpeg.c  picojpegtest.c
benchmarks/picojpeg/src/portme/: printfmap.c
benchmarks/quicksort/: CMakeLists.txt
benchmarks/quicksort/src/: CMakeLists.txt  main.c
benchmarks/sha/: CMakeLists.txt
benchmarks/sha/src/: CMakeLists.txt
benchmarks/sha/src/sha/: Makefile  asc2header.sh  input_small.h  main.c  sha.c  sha.h  test.asc.h
docker/: Dockerfile  README.md  build.sh  get-results.sh  run.sh
docker/wario-compiler/: Dockerfile  build.sh  run.sh
docker/wario-experiments/: Dockerfile  build.sh  run.sh
docker/wario-source/: Dockerfile
driver/: CMakeLists.txt  ICS.cpp
figures/: intermittency-example.drawio  intermittency_example.drawio  loop-examples.drawio  system-overview.drawio
icemu/: build.sh
include/: Configurations.hpp  LoopUnroller.hpp  LoopWriteScheduler.hpp  Utils.hpp
llvm/: build.sh  download.sh
llvm/llvm-9.0.1/: README.md
noelle/: build.sh
passes/: build.sh
passes/common/include/: PassUtils.hpp  WarAnalysis.hpp
passes/common/src/: PassUtils.cpp  WarAnalysis.cpp
passes/idempotent-expander/: CMakeLists.txt  OldCMakeLists.txt
passes/idempotent-expander/include/: Configurations.hpp  Expander.hpp
passes/idempotent-expander/src/: CMakeLists.txt  Configurations.cpp  Expander.cpp  Expander_inliner.cpp  Pass.cpp
passes/idempotent-regions/: .gitignore  CMakeLists.txt  Makefile  TODO.txt
passes/idempotent-regions/driver/: CMakeLists.txt  IdempotentRegions.cpp
passes/idempotent-regions/include/: CheckpointCountInserter.hpp  CheckpointIntrinsicInserter.hpp  Configurations.hpp  HittingSet.hpp  HittingSetBruteForce.hpp  IdempotentPathAnalysis.hpp  IdempotentRegion.hpp  IdempotentRegionAnalysis.hpp  PassUtils.hpp  PlacementCost.hpp  ProtectingWriteAnalysis.hpp  Utils.hpp  WarAnalysis.hpp
passes/idempotent-regions/src/: CheckpointCountInserter.cpp  CheckpointIntrinsicInserter.cpp  Configurations.cpp  HittingSet.cpp  HittingSetBruteForce.cpp  IdempotentPathAnalysis.cpp  IdempotentRegionAnalysis.cpp  PassUtils.cpp  PlacementCost.cpp  ProtectingWriteAnalysis.cpp  Utils.cpp  WarAnalysis.cpp
passes/idempotent-regions/test/arm-code/coremark/: CMakeLists.txt  cmake-gcc.sh
passes/idempotent-regions/test/arm-code/coremark/build-noelle/: CMakeCache.txt  Makefile  cmake_install.cmake
passes/idempotent-regions/test/arm-code/coremark/build-noelle/src/: Makefile  cmake_install.cmake  coremark-idemp.ll  coremark-idemp.txt  coremark-norm.ll  coremark.bc  coremark.bc.llvm.manifest  coremark.elf  coremark.elf.S  coremark.elf.wars  coremark.gclang.elf  coremark.ll  coremark.map  coremark.uninstr.elf  coremark.uninstr.elf.S
passes/idempotent-regions/test/arm-code/coremark/src/: CMakeLists.txt
passes/idempotent-regions/test/arm-code/coremark/src/icemu/: core_portme.h
passes/loop-scheduler/: CMakeLists.txt  README
passes/loop-scheduler/driver/: CMakeLists.txt  ICS.cpp  LoopWriteClusterer.cpp
passes/loop-scheduler/include/: Configurations.hpp  LoopUnroller.hpp  LoopWriteScheduler.hpp  Utils.hpp
passes/loop-scheduler/src/: Configurations.cpp  LoopUnroller.cpp  LoopWriteScheduler.cpp
passes/write-buffering/: CMakeLists.txt
passes/write-buffering/driver/: CMakeLists.txt  WriteBuffering.cpp
passes/write-buffering/include/: Analyzer.hpp  Configurations.hpp  Transformer.hpp  Utils.hpp
passes/write-buffering/src/: Analyzer.cpp  Configurations.cpp  Transformer.cpp  Utils.cpp
passes/write-buffering/test/: Makefile  build-coremark
plotting/: .gitignore  BenchmarkConfiguration.py  BenchmarkPlot.ipynb  CallFrequencyPlot.ipynb  Color.py  LoopUnrollPlot.ipynb  MatplotlibFonts.py  PowertracePlot.ipynb  RandomPowerTraceTest.ipynb  build.sh
plotting/plots/: elfsize-table.tex
plotting/plots-pregenerated/: README.md  powertrace-table.tex
scripts/: benchmark-analyze.py  benchmark-build  benchmark-compare  benchmark-run  benchmark-validate  c-to-llvm  callsites-to-quickfix  iclang  llvm-to-elf  pass-apply  pass_build.sh  powertrace-combine  powertrace-validate  run-elf  run-elf-fast  run-powertrace  run-powertrace-file  run-test  run-testcase  run-tests-dir  show-callsites.vim  show-wars.vim  wars-to-quickfix
src/: Configurations.cpp  LoopUnroller.cpp  LoopWriteScheduler.cpp  Utils.cpp
test/arm-code/list-reverse/: CMakeLists.txt
test/arm-code/list-reverse/src/: CMakeLists.txt  list.c  list.h  main.c
toolchain/: .gitignore  run_me.sh
toolchain-arm/: startup.c  toolchain.cmake
toolchain-arm/checkpoint/: checkpoint-body.h  checkpoint.c  checkpoint.h
toolchain-arm/checkpoint/test/checkpoint_side_effects/: CMakeLists.txt  build.sh  checkpoint_test.c  run.sh
toolchain-arm/lib/: README.md
toolchain/catpass/: CMakeLists.txt
tools/: code-report
tools/code_report/: code-report.py  editor.py  syntax.py
traces/: README.md  parse_traces.py  run.sh
(+197 files in other folders)
